media control: fix scrubber vertical alignment

--- a/src/components/media_control/public/media-control.css
+++ b/src/components/media_control/public/media-control.css
@@ -183,7 +183,7 @@ div.volume-current[data-volume] {
 div.volume-scrubber[data-volume] {
   width: 12px;
   height: 12px;
-  left: -2px;
+  left: -3px;
   top: -6px;
   position: relative;
   overflow: hidden;
